home.css
html, body {
  padding: 0; 
  margin: 0;
  border: 0;
  background-color: #202020;
  color: #FCFCFC;
  font-family: "Exo 2", sans-serif;
  font-weight: 200;
  font-size: 20px;
  text-align: center;
}

.page-container {
  margin: 0 10px;
}

.hex-container {
  text-align: left;
  margin: 0 auto;
  width: 360px;
  position: relative;
}

.hex {
  margin-top: 140px;
  width: 360px;
  height: 200px;
  background-color: #41C4EE;
  position: relative;
  z-index: 0;
}
.hex:before, .hex:after {
  content:"";
  border-left: 180px solid transparent;
  border-right: 180px solid transparent;
  position: absolute;
}

.hex:before {
  top: -90px;
  border-bottom: 90px solid #41C4EE;
}
.hex:after {
  bottom: -90px;
  border-top: 90px solid #41C4EE;
}

.hex.inner {
  background-color: #202020;
  -webkit-transform: scale(.98, .98);
  -moz-transform: scale(.98, .98);
  transform: scale(.98, .98);
  z-index: 1;
}

.hex.inner:before {
  border-bottom: 90px solid #202020;
}

.hex.inner:after {
  border-top: 90px solid #202020;
}
  
.hexagon-text, .subtitle {
  position: relative;
  z-index: 2;
}

.hexagon-text {
  position: relative;
  font-size: 40px;
  margin: -130px 0 205px;
}

.subtitle {
  position: relative;
}

.social-link-container {
  width: 600px;
  margin: 24px auto;
}

.social-link {
  display: inline-block;
  border: 2px solid #41C4EE;
  margin: 0 14px;
  border-radius: 100%;
  text-align: center;
  padding: 0;
  cursor: pointer;
}

.social-link:hover {
  border: 2px solid #FCFCFC;
  box-shadow: 0 0 0 2px #FCFCFC;
  -webkit-transition: all .5s;
  transition: all .5s;
}

.social-link:active {
  border: 2px solid #FCFCFC;
  box-shadow: 0 0 0 0;
  -webkit-transition: all 0s;
  transition: all 0s;
}

.social-link a, .social-link a:visited {
  color: #FCFCFC;
  text-decoration: none;
}

i {
  display: block;
  border-radius: 100%;
}

.fa-linkedin, .fa-github {
  padding: 14px 15.5px;
}

.fa-twitter {
  padding: 14px 15px;
}

